[gd_scene load_steps=7 format=3 uid="uid://b53p2b1djc4tc"]

[ext_resource type="Shader" uid="uid://p43jphasyyg7" path="res://scripts/control/menu.gdshader" id="1_0d2gn"]
[ext_resource type="Script" uid="uid://4t15ag7nsgxb" path="res://scripts/control/config.gd" id="1_fu4ru"]
[ext_resource type="Texture2D" uid="uid://wlpfcm77fmkl" path="res://assets/png/1.png" id="2_14yi8"]
[ext_resource type="FontFile" uid="uid://buv8pue5j2q3t" path="res://assets/fonts/HelpMe.ttf" id="3_14yi8"]
[ext_resource type="AudioStream" uid="uid://q6qdvqxw6ict" path="res://assets/sounds/menu/music_menu.wav" id="3_fu4ru"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iptxn"]
shader = ExtResource("1_0d2gn")
shader_parameter/pixel_size = 169.202

[node name="config" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu4ru")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_iptxn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -337.5
offset_right = 600.0
offset_bottom = 337.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_14yi8")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 123.0
offset_bottom = 687.0
color = Color(0.00392157, 0.0117647, 0.0117647, 1)

[node name="ColorRect2" type="ColorRect" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 1104.0
offset_top = -17.0
offset_right = 1223.0
offset_bottom = 696.0
color = Color(0.00392157, 0.0117647, 0.0117647, 1)

[node name="CanvasLayer2" type="CanvasLayer" parent="TextureRect"]

[node name="Creditos" type="Button" parent="TextureRect/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0.717647)
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -86.0
offset_right = 106.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(106.09, 26.585)
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.400332, 0.0104109, 0.0104274, 1)
theme_override_fonts/font = ExtResource("3_14yi8")
theme_override_font_sizes/font_size = 40
text = "Creditos"
flat = true

[node name="Lore" type="Button" parent="TextureRect/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0.717647)
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -14.0
offset_right = 55.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(54.31, 26.3)
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.400332, 0.0104109, 0.0104274, 1)
theme_override_fonts/font = ExtResource("3_14yi8")
theme_override_font_sizes/font_size = 40
text = "Lore"
flat = true

[node name="cjr" type="Button" parent="TextureRect/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0.717647)
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = 64.0
offset_right = 54.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(53.885, 26.74)
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.400332, 0.0104109, 0.0104274, 1)
theme_override_fonts/font = ExtResource("3_14yi8")
theme_override_font_sizes/font_size = 40
text = "Guia"
flat = true
alignment = 0

[node name="Button" type="Button" parent="TextureRect/CanvasLayer2"]
clip_contents = true
offset_right = 84.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 62
text = "<"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fu4ru")
autoplay = true

[connection signal="mouse_entered" from="TextureRect/CanvasLayer2/Creditos" to="." method="_on_creditos_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/CanvasLayer2/Creditos" to="." method="_on_creditos_mouse_exited"]
[connection signal="pressed" from="TextureRect/CanvasLayer2/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="mouse_entered" from="TextureRect/CanvasLayer2/Lore" to="." method="_on_lore_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/CanvasLayer2/Lore" to="." method="_on_lore_mouse_exited"]
[connection signal="pressed" from="TextureRect/CanvasLayer2/Lore" to="." method="_on_lore_pressed"]
[connection signal="mouse_entered" from="TextureRect/CanvasLayer2/cjr" to="." method="_on_cjr_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/CanvasLayer2/cjr" to="." method="_on_cjr_mouse_exited"]
[connection signal="pressed" from="TextureRect/CanvasLayer2/cjr" to="." method="_on_cjr_pressed"]
[connection signal="pressed" from="TextureRect/CanvasLayer2/Button" to="." method="_on_button_pressed"]
